--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,11 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  database: mps_test
+  adapter: mysql2
+  host: localhost
+  username: dmc_mps
+  password: h2Ck8vtq
+  database: dmc_mps_test
   pool: 5
   timeout: 5000
 
